# secret-santa-thing

./: .gitignore  Dockerfile  LICENSE  README.md
backend/: Cargo.toml  README.md
backend/.sqlx/: query-01060a82b6686b4ae506c3e0c9297a9e31e4e8e696feba02277106e5cfc55dd1.json  query-1f4684105233f5c193c4fe8ed16a5a8af66da949ef29a26eadb6522e61820832.json  query-4bf3fe95bf0f45d0d5b9765d485be4c1105f70d1ea1e0b4745420981365d8d89.json  query-6629c37f3cbdef0716d53e6ebf864791cf18cead822eca901ef7487cabeb7ad9.json  query-6b257e66bbfa964c4d666654cc83dbbe14b52bd7b058b3c3716807d49f26db08.json  query-6b31fad1ffe485eca6f0dda9921f695d64a4aa62554c44df33c59cb375d98096.json  query-6c533c43687b2b71dee1aeacf23213a7b8b3257caedc1ee4e3fd11a91828e63a.json  query-8bf5697af6355a75e63cbb730170d6853e5f14db1f517c0c2d71f2160805d01f.json  query-9c32d803e3e4729f17ee72e7138693eb843d4f4aa193c0165981f5160f87861e.json  query-c7707179a56c6a573d1b4f819c5c5fe85761a24cb91807d4d4945ad7c7c873c5.json  query-cf8a04e4681f826ffc36c17e677f5806559b819f93ef5788d26b350f3130bc5f.json  query-fca69df1794a593d5402e39a10614b835557af44e425c3e30fc9edb5752e13a3.json
backend/migrations/: 20241207061210_initial_schema.sql
backend/src/: db.rs  errors.rs  main.rs  models.rs  rest_handlers.rs  static_handlers.rs  ws_handlers.rs
frontend/: .env.production  README.md  components.d.ts  env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.vue  main.ts
frontend/src/components/: NameModal.vue
frontend/src/router/: index.ts
frontend/src/stores/: santa.ts
(+2 files in other folders)
