[package]
name = "secret-santa"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = {version = "0.7.9", features = ["ws"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "fs"] }
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
tokio-stream = "0.1"
futures = "0.3"
rust-embed="8.5.0"
mime_guess = "2.0.5"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
sqlx-cli = "0.7"